# ShowtimePlugin-Audio

./: CMakeLists.txt  CMakeSettings.json
apps/: Looper.cpp
src/: AudioComponentBase.cpp  AudioComponentBase.h  AudioDevice.cpp  AudioDevice.h  AudioFactory.cpp  AudioFactory.h  AudioSpinMutex.h  AudioVSTFactory.cpp  AudioVSTFactory.h  AudioVSTHost.cpp  AudioVSTHost.h  Looper.cpp  VSTPlugProvider.cpp  VSTPlugProvider.h  WindowController.cpp  WindowController.h  plugin.cpp  plugin.h  ringbuffer.cpp  ringbuffer.h
src/AudioDevices/: AudioDevice.cpp  AudioDevice.h  CMakeLists.txt
src/VST2Host/: CMakeLists.txt
src/VST3Host/: AudioVSTFactory.cpp  AudioVSTHost.cpp  AudioVSTHost.h  CMakeLists.txt  VSTPlugProvider.h
src/VST3Host/platform/: iplatform.h
src/VST3Host/platform/win32/: platform.cpp
src/platform/win32/: window.h
